text area alignment fix

--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -30,7 +30,6 @@
 
 .text-input {
 	color: v.$main-text-color;
-	text-align: center;
 	padding: var(--padding) calc(var(--padding) * 1.5);
 	background: v.$main-btn-color;
 	border-radius: 0 0 var(--border-radius) var(--border-radius);
