--- a/scss/partials/_root.scss
+++ b/scss/partials/_root.scss
@@ -47,6 +47,7 @@ body {
 
 h1 {
     font-size: 1.25rem;
+    text-align: center;
 }
 
 // * {
